Added address, website and image_uri to CommunityResource model to cater for GET API (todo)
